--- a/module/Command/view/command/index/index.phtml
+++ b/module/Command/view/command/index/index.phtml
@@ -5,7 +5,7 @@
     <div class="btn-group" data-toggle="buttons">
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="00" checked>bash</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="01" checked>vagrant</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="02" checked>mysql</label>
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="02" checked>oracle</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="03" checked>docker</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="04" checked>git</label>
     </div>
