--- a/module/Command/view/command/index/index.phtml
+++ b/module/Command/view/command/index/index.phtml
@@ -9,7 +9,7 @@
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="03" checked>mysql</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="04" checked>git</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="05" checked>docker</label>
-    </div>
+    </div>m
     <button name="search" id="search" class="center-block btn btn-success">Search!!</button>
   </div>
   </form>
