--- a/module/Command/view/command/index/index.phtml
+++ b/module/Command/view/command/index/index.phtml
@@ -3,13 +3,12 @@
   <div class="form-group">
     <input type="text" class="form-control" name="command" id="command" placeholder="Enter Command you want to execute!">
     <div class="btn-group" data-toggle="buttons">
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="00" checked>bash</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="01" checked>vagrant</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="02" checked>oracle</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="03" checked>mysql</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="04" checked>git</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="05" checked>docker</label>
-    </div>m
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="00" checked>linux</label>
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="01" checked>cmd</label>
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="02" checked>mysql</label>
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="03" checked>git</label>
+        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="04" checked>vagrant</label>
+    </div>
     <button name="search" id="search" class="center-block btn btn-success">Search!!</button>
   </div>
   </form>
