--- a/module/Command/view/command/index/index.phtml
+++ b/module/Command/view/command/index/index.phtml
@@ -4,7 +4,7 @@
     <input type="text" class="form-control" name="command" id="command" placeholder="Enter Command you want to execute!">
     <div class="btn-group" data-toggle="buttons">
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="00" checked>linux</label>
-        <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="01" checked>cmd</label>
+    <!--    <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="01" checked>cmd</label> -->
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="02" checked>mysql</label>
         <label class="btn btn-conditions active"><input type="checkbox" autocomplete="off" name="check" value="03" checked>git</label>
     </div>
@@ -13,13 +13,23 @@
   </form>
 </div>
 <hr>
-<div class="container-fluid">
-  <div class="row text-center">
-    <div class="default-message">コマンドを入力してね(・∀・)</div>
-    <div class="selected-group col-xs-12"></div>
+<div class="row container-fluid">
+    <div class="container-fluid default-message">
+      <div class="about">
+        <div class="title text-center"><strong>About</strong></div>
+          <div class="text-left">様々なコマンドを検索し、オプションごとクリップボードにコピーできます<br>オレンジボタンをOFFにすることで検索対象から除外することもできます<br>コマンドは随時追加していきます</div>
+      </div>
+        <hr>
+      <div class="update">
+        <div class="title text-center"><strong>Update</strong></div>
+        <div class="col-xs-3">2017/06/18</div>
+        <div class="col-xs-9 ">linux、mysql、gitのコマンドを追加しました</div>
+        <div class="col-xs-3">2017/06/19</div>
+        <div class="col-xs-9">"diff"コマンドを追加しました</div>
+      </div>
+    </div>
     <div class="selected-command col-xs-12"></div>
     <div class="command-list-area"></div>
-  </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
@@ -46,7 +56,7 @@ $(function() {
                 '該当するコマンドはありませんでした'
             );
 
-            var group_cd = '';
+            var group = '';
 
             switch (data[0].group_cd){
                 case '00':
@@ -70,14 +80,12 @@ $(function() {
                     $(".default-message").empty();
 
                     $(".selected-command").append(
-                        '<label class="btn btn-conditions active">' +
-                        group +
-                        '</label>' +
-                        '<strong>' +
+                        '<p><strong>' +
                         data[i].original_command_name +
+                        '</strong></p>' +
+                        '<span class=selected-group>' + group + '</span>' +
                         '  ' +
-                        data[i].command_explain_desc +
-                        '</strong>'
+                        data[i].command_explain_desc
                     );
                 }
 
