--- a/module/Command/view/command/index/index.phtml
+++ b/module/Command/view/command/index/index.phtml
@@ -28,7 +28,7 @@
         <div class="col-xs-9">"diff"コマンドを追加しました</div>
       </div>
     </div>
-    <div class="selected-command col-xs-12"></div>
+    <div class="selected-command col-xs-12 text-center"></div>
     <div class="command-list-area"></div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
