--- a/module/Command/view/layout/layout.phtml
+++ b/module/Command/view/layout/layout.phtml
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <meta name="google-site-verification" content="myJMospzZCV5r3e5rkTJKXWNDJ37AA3ZZzHc5j9SNpI" />
         <meta charset="utf-8">
         <?php echo $this->headTitle('Copy Command to Clipboard')?>
 
@@ -35,6 +36,16 @@
 
               });
             });
+        </script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-40621186-6', 'auto');
+            ga('send', 'pageview');
+
         </script>
 
     </head>
